# -MyCommonLibs

./: .gitattributes  .gitignore  README.md
CabinetMagager-Source/: Blowfish.hpp  Cabinet.cpp  Cabinet.hpp  CabinetMagager.cpp  CabinetMagager.rc  CabinetMagager.vcxproj  CabinetMagager.vcxproj.filters  Cache.hpp  Compress.hpp  Defines.h  Error.hpp  Extract.hpp  ExtractMemory.hpp  ExtractResource.hpp  ExtractStream.hpp  ExtractUrl.hpp  File.hpp  Internet.hpp  Map.hpp  ReadMe.txt  Static.cpp  Static.hpp  String.hpp  Trace.hpp  resource.h  stdafx.cpp
CommonSources/: ---APIContext.h  --ResourceAnnotation.h  CodeBlock.h  EXPAND_MACRO.h  SimpleUnknown.h
DTraceLib/: APIStatus.h  DTraceLib.cpp  DTraceLib.h  DTraceLib.vcxproj  DTraceLib.vcxproj.filters  ErrorResultStatus.cpp  ErrorResultStatus.h  ErrorResultStatus.h.Output.hpp  ErrorResultStatus.h.xml.Output.hpp  ProcessGlobalData.cpp  ProcessGlobalData.h  ReadMe.txt  ThreadLocalData.cpp  ThreadLocalData.h  dllmain.cpp  resource.h  stdafx.cpp
DiskParser/: CacheIOMaker.cpp  CacheIOMaker.h  DiskExt.cpp  DiskExt.h  DiskExt.h.Output.hpp  DiskExt.h.xml.Output.hpp  DiskParser.000.rar  DiskParser.cpp  DiskParser.vcxproj  DiskParser.vcxproj.filters  MirrorAndSingleSimpleRW.cpp  MirrorAndSingleSimpleRW.h  ReadMe.txt  SpannedAndSpannedSimpleRW.cpp  SpannedAndSpannedSimpleRW.h  StrippedAndRaid5RW.cpp  StrippedAndRaid5RW.h  VolumeIOFileDevice.cpp  VolumeIOFileDevice.h  referece-source.rar  stdafx.cpp
ExternFiles/: cert.rar
FileLock/: FileLock-Main.cpp  FileLock-Test.cpp  FileLock.vcxproj  FileLock.vcxproj.filters  FileLockInterface.h  FileLockLib.cpp  FileLockLib.h  ReadMe.txt  stdafx.cpp
GetCurrentModuleName/: GetCurrentModuleName-Main.cpp  GetCurrentModuleName.cpp  GetCurrentModuleName.h  GetCurrentModuleName.vcxproj  GetCurrentModuleName.vcxproj.filters  ReadMe.txt  stdafx.cpp
HighPerfTransfer/: CommandList.cpp  CommandList.h  CommandList.h.Output.hpp  CommandList.h.xml.Output.hpp  CommandModuleDef.h  CreateWin32FileHelper.cpp  CreateWin32FileHelper.h  DowloadClient.cpp  DowloadClient.h  DownloadClientHandler.cpp  DownloadClientHandler.h  DownloadServerHandler.cpp  DownloadServerHandler.h  EnumClient.cpp  EnumClient.h  EnumClientHandler.cpp  EnumClientHandler.h  EnumServerHandler.cpp  EnumServerHandler.h  EumCallbackInterface.cpp  EumCallbackInterface.h  EventHelper.cpp  EventHelper.h  HPTHandler.cpp  HPTHandler.h  HPTHeaderBody.cpp  HPTHeaderBody.h  HPTHelper.h  HPTSendReceiver.cpp  HPTSendReceiver.h  HPTSendReceiverInterface.cpp  HPTSendReceiverInterface.h  HighPerfTransfer-Main.cpp  HighPerfTransfer.UWE_NEW_SERIALIZE_FUNCTION.rar.TXT  HighPerfTransfer.vcxproj  HighPerfTransfer.vcxproj.filters  JobMainFlowbInterface.h  PluginFileFactoryConfig.cpp  PluginFileFactoryConfig.h  PluginFileFactoryConfig.h.Output.hpp  (+21 more)
MTReadWrite/: BitOp.cpp  BitOp.h  CircularBuffer.cpp  CircularBuffer.h  CircurlarBufferCV.h  CountDownEvent.h  FileCopyInterface.h  FileDeviceBackupHandle.cpp  FileDeviceBackupHandle.h  FileDeviceHandle.cpp  FileDeviceHandle.h  FileDeviceInterface.cpp  FileDeviceInterface.h  FileDeviceMem.cpp  FileDeviceMem.h  FileDeviceMemAutoAlloc.cpp  FileDeviceMemAutoAlloc.h  FileDeviceWin32.cpp  FileDeviceWin32.h  FileDeviceWin32Prealloc.cpp  FileDeviceWin32Prealloc.h  InstantSpeed.cpp  InstantSpeed.h  IntDiv.cpp  IntDiv.h  LoadLibInterface.h  LoadLibWin32.cpp  LoadLibWin32.h  MTCopy.cpp  MTCopy.h  MTPoolAndQueue.h  MTQueueV2.h  MTReadWrite-UT.cpp  MTReadWrite.sln  MTReadWrite.vcxproj  MTReadWrite.vcxproj.filters  MachineMRSWLock.cpp  MachineMRSWLock.h  MtQueueCsCv.h  ParallelRun.h  (+30 more)
MutexLock/: InterfaceMutexLock.h  MutexLock.vcxproj  MutexLock.vcxproj.filters  MutexLockWin32.cpp  MutexLockWin32.h  MutextLock-Main.cpp  ReadMe.txt  SemaphoreLockWin32.cpp  SemaphoreLockWin32.h  stdafx.cpp
MySimpleXml/: 1.xml  AddFileAttributesInFolder.Serialize.cpp  AddFileAttributesInFolder.Serialize.h  AddFileAttributesInFolder.Serialize.h.Output.hpp  AddFileAttributesInFolder.Serialize.h.xml.Output.hpp  EnumElement.cpp  EnumElement.h  EnumWinFile.cpp  FileTreeOp.cpp  FileTreeOp.h  GetTestCaseNumber.cpp  GetTestCaseNumber.h  MySimpleXml-Main.cpp  MySimpleXml.sln  MySimpleXml.vcxproj  MySimpleXml.vcxproj.filters  ReadMe.txt  ReadWriteStringFile.cpp  ReadWriteStringFile.h  SimpleXml.cpp  SimpleXml.h  SimpleXmlHelper.h  StringValueConvert.cpp  StringValueConvert.h  ValueXmlElementConvert.cpp  ValueXmlElementConvert.h  VcxprojDisableOpt.cpp  VcxprojDisableOpt.h  a.XML  build_single_file.cpp  build_single_file.h  d.xml  s.xml  sampleXmlString.h  stdafx.cpp  testSerializeSample.cpp  testSerializeSample.h  testSerializeSample.h.Output.hpp  testSerializeSample.h.xml.Output.hpp  testStruct.h  (+2 more)
NTFSParser-Source/: NTFSParser-Main.cpp  NTFSParser.vcxproj  NTFSParser.vcxproj.filters  NTFS_Lib_Attribute.cpp  NTFS_Lib_Attribute.h  NTFS_Lib_Common.h  NTFS_Lib_Common_Helpers.h  NTFS_Lib_DataType.h  NTFS_Lib_FileRecord.cpp  NTFS_Lib_FileRecord.h  NTFS_Lib_Helper.cpp  NTFS_Lib_Helper.h  NtfsTest.cpp  NtfsTest.h  ReadMe.txt  ntdll.dll.api.cpp  ntdll.dll.api.h  stdafx.cpp  xxxxxxxxx.cpp.0000
OpensslHelper/: CompressEncryptInterface.h  OpensslCompressEncrypt.cpp  OpensslCompressEncrypt.h  OpensslHelper-Main.cpp  OpensslHelper.cpp  OpensslHelper.h  OpensslHelper.vcxproj  OpensslHelper.vcxproj.filters  ReadMe.txt  (+6 more)
cmake-sample-template/: 000-build.cmd  000-config.cmd  000-config.sh  001-build.cmd  001-build.sh  001-install.cmd  002-install.cmd  002-install.sh  CMakeLists.MY_PROJECT_VAR.cmake  CMakeLists.MY_VAR.cmake  CMakeLists.mingw32.toolchain.cmake  CMakeLists.txt  feature_def.h  lib.def  main.asm  main.c  main.cpp  main.h  main.s  system_def.h
cmake-sample-template/cmake-files-copy/: CMakeLists.MY_VAR.cmake  CMakeLists.mingw32.toolchain.cmake  CMakeLists.txt  sss-copy-files.cmd
cmake-sample-template/src/: main.cc  main.cxx  main.hpp
cmake-sample-template/zzz-cmake-files-backup/: 000-config.cmd  000-config.sh  001-build.sh  CMakeLists.MY_VAR.cmake  sss-copy-files.cmd
zzz-test/000-cmake-gen/000-cmake-gen/: 000-cmake-gen.cpp  000-cmake-gen.h  CMakeLists.txt
(+2928 files in other folders)
